--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,12 +34,12 @@ anyhow = "1.0"
 askalono = "0.4"
 atty = "0.2"
 bitvec = { version = "0.17", features = ["alloc"] }
-cargo-edit = { version = "0.6", featurs = ["upgrade"], optional = true }
+cargo-edit = { version = "0.6", features = ["upgrade"], optional = true }
 chrono = "0.4"
 clap = "2.33"
 codespan = { version = "0.9", features = ["reporting"] }
 codespan-reporting = "0.9"
-crates-index = "0.15"
+crates-index = { version = "0.15.2", path = "../rust-crates-index" }
 crossbeam = "0.7"
 fern = "0.6"
 home = "0.5"
